credit_application,get pre qualified

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -13,6 +13,8 @@ Primary use:	Autozone
 @import url('../fonts/flaticon/flaticon.css');
 @import url('../fonts/simple/simple.css');
 @import url('../fonts/autoicon/css/fontello.css');
+@import url('../fonts/Nexa-Bold-Italic.ttf');
+@import url('../fonts/Nexa-Heavy-Italic.ttf');
 
 /* PLUGIN CSS */
 @import url('../plugins/sliderpro/css/slider-pro.css');
