--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -53,19 +53,21 @@ img.pull-left {
 	margin-bottom: 30px;
 	padding-right: 10px;
 	padding-left: 10px;
-	font-family: Ubuntu;
+	font-family: 'Nexa Heavy Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Ubuntu; */ 
 	font-size: 34px;
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 
 .ui-title-block {
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 40px;
 	font-weight: 700;
 	color: #222;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .ui-title-block_mod-a {
 	color: #fff;
@@ -88,11 +90,12 @@ img.pull-left {
 
 .ui-title-inner {
 	margin-bottom: 12px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */
 	font-size: 16px;
 	font-weight: 700;
 	color: #222;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .ui-title-inner_mod-a {
 	font-size: 20px;
@@ -257,10 +260,11 @@ img.pull-left {
 
 .brand-link {
 	display: block;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 1;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .brand-link .icon {
 	display: inline-block;
@@ -451,11 +455,12 @@ img.pull-left {
 }
 .card__label {
 	display: block;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 11px;
 	font-weight: 700;
 	color: #fff;
 	transform: skewX(18deg);
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .card__inner {
 	margin-left: 270px;
@@ -699,11 +704,12 @@ img.pull-left {
 .footer-title {
 	margin-top: 10px;
 	margin-bottom: 0;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 30px;
 	font-weight: 700;
 	color: #fff;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .footer__item {
 	display: inline-block;
@@ -911,9 +917,10 @@ img.pull-left {
 
 .main-block {
 	margin: 40px 350px 86px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	color: #555;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .main-block__label {
 	margin-bottom: 16px;
@@ -960,9 +967,10 @@ img.pull-left {
 }
 .list-services__title {
 	margin-bottom: 15px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 18px;
 	color: #fff;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .list-services__title strong {
 	display: block;
@@ -1069,10 +1077,11 @@ img.pull-left {
 
 .list-progress__name {
 	display: block;
-	font-family: Raleway;
+	ffont-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 15px;
 	font-weight: 600;
 	color: #999;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 
 
@@ -1115,13 +1124,14 @@ img.pull-left {
 	display: block;
 	width: 360px;
 	height: 210px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	color: #fff;
 	border-top: 1px solid #333;
 	border-bottom: 1px solid #333;
 	background-color: rgba(0, 0, 0, 0.4);
 	transition: all 0.3s;
 	transform: skewX(6deg);
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .list-type__link:hover {
 	color: #fff;
@@ -1238,11 +1248,12 @@ img.pull-left {
 	box-shadow: -5px 0 0 0 #999;
 }
 .list-staff__name {
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 15px;
 	font-weight: 700;
 	color: #222;
 	transition: all 0.3s;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .list-staff__item:hover .list-staff__name,
 .list-staff__item:hover .list-staff__categories,
@@ -1314,10 +1325,11 @@ img.pull-left {
 }
 .staff-progress__title {
 	margin-bottom: 22px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 12px;
 	font-weight: 700;
 	color: #555;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 
 
@@ -1354,7 +1366,7 @@ img.pull-left {
 	padding-top: 4px;
 	padding-bottom: 4px;
 	padding-left: 40px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 16px;
 	font-weight: 700;
 	color: #222;
@@ -1362,6 +1374,7 @@ img.pull-left {
 	transition: all 0.3s;
 	text-align: left;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .reviews:hover .reviews__title {
 	color: #fff;
@@ -1385,11 +1398,12 @@ img.pull-left {
 	margin-left: 115px;
 }
 .reviews__name {
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-weight: 700;
 	color: #555;
 	transition: all 0.3s;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .reviews__category {
 	font-size: 10px;
@@ -1465,10 +1479,11 @@ img.pull-left {
 	padding-top: 7px;
 	padding-bottom: 9px;
 	padding-left: 26px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 26px;
 	font-weight: 700;
 	color: #222;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .car-details__wrap-price {
 	float: right;
@@ -1503,20 +1518,22 @@ img.pull-left {
 }
 .letter__title {
 	margin-bottom: 14px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 24px;
 	font-weight: 600;
 	line-height: 1.16;
 	color: #fefefe;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .letter__btn {
 	float: right;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 14px;
 	font-weight: 700;
 	color: #fff;
 	border-right: 2px solid #fff;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .letter__inner {
 	float: left;
@@ -1649,9 +1666,10 @@ img.pull-left {
 }
 .main-slider__subtitle {
 	margin-bottom: 25px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 26px;
 	font-weight: 500;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .main-slider__text {
 	font-size: 16px;
@@ -1688,11 +1706,12 @@ img.pull-left {
 .main-slider__btn_inner {
 	display: inline-block;
 	width: 120px;
-	font-family: Ubuntu;
+	font-family: 'Nexa Heavy Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Ubuntu; */ 
 	color: #fff;
 	transform: skewX(-16deg);
 	text-align: center;
 	text-transform: uppercase;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 
 .slider-services {
@@ -1713,10 +1732,11 @@ img.pull-left {
 }
 .slider-grid__name {
 	display: inline-block;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-weight: 600;
 	background-color: rgba(0, 0, 0, 0.7);
 	transition: all 0.3s;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .slider-grid__inner_mod-b .slider-grid__name {
 	position: absolute;
@@ -1828,9 +1848,10 @@ img.pull-left {
 }
 .slider-gallery__title {
 	margin-top: 16px;
-	font-family: Raleway;
+	font-family: 'Nexa Bold Italic', sans-serif; /* Replace Ubuntu with Nexa Heavy Italic font-family: Raleway; */ 
 	font-size: 15px;
 	font-weight: 600;
+	font-style: italic; /* Italic style to align with Nexa's design */
 }
 .slider-gallery__link {
 	position: relative;
