--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -583,6 +583,7 @@ img.pull-left {
   #sliderpro1 {
 	position: relative;
 	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.7);
   }
   
  /* Common Styles */
@@ -1700,7 +1701,7 @@ img.pull-left {
 	bottom: -3vw;
 	width: 50%;
 	height: 8vw;
-	background-color: #f5f5f5;
+	background-color: rgba(0, 0, 0, 0.7);
 	z-index: 101;
 	content: '';
 }
